--- a/apuntes.html
+++ b/apuntes.html
@@ -175,7 +175,7 @@
                         Curso...
                     </a>
 
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu w-100">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -187,7 +187,7 @@
                         Asignatura...
                     </a>
 
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu w-100">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
